= 3.5.0 (2018-02-14)

* Add request_aref plugin for configuring behavior of request [] and []= methods (jeremyevans)

* Make public plugin not add Content-Type header when serving 304 response for gzipped file (jeremyevans)

* Make content_for call with block convert block result to string before passing to tilt (jeremyevans) (#135)

= 3.4.0 (2018-01-12)

* Add middleware_stack plugin for removing middleware and inserting middleware before the end of the stack (jeremyevans)

* Make head plugin handle closing existing response bodies if the body responds to close (Eric Wong)

= 3.3.0 (2017-12-14)

* Add typecast_params plugin for converting param values to explicit types (jeremyevans)

= 3.2.0 (2017-11-16)

* Use microseconds in assets plugin :timestamp_paths timestamps (jeremyevans)

* Add timestamp_public plugin for serving static files with paths that change based on modify timestamp (jeremyevans)

= 3.1.0 (2017-10-13)

* Make set_layout_locals and set_view_locals in branch_locals plugin work when the other is not called (jeremyevans)

* Add :timestamp_paths option to assets plugin to include timestamps in paths in non-compiled mode (jeremyevans)

* Handle ExecJS::RuntimeUnavailable when testing for javascript compression support using uglifier (jeremyevans)

* Remove deprecated Roda.thread_safe_cache and RodaRequest#placeholder_string_matcher? methods (jeremyevans)

= 3.0.0 (2017-09-15)

* Make defined symbol_matcher and hash_matcher match methods private (jeremyevans)

* Use public_send instead of send unless calling private methods is expected (jeremyevans)

* Compute multi_run regexp when freezing app to avoid thread safety issues at runtime (jeremyevans)

* Remove deprecated support for using undefined multi_route namespaces when routing (jeremyevans)

* Make it possible to reset :include_request options to false for json and json_parser plugins (jeremyevans)

* Deprecate RodaRequest#placeholder_string_matcher? private method (jeremyevans)
